bin/test/fixtures/public/fail/semantic/extra/objCreation_wrong_type.jmm
class Object {
    public static void main(String[] a) {
        Object obj;
        obj = new WrongType(); // MUST FAIL
    }
}